ARCH-137: plugin es vsersion fix

--- a/plugin-descriptor.properties
+++ b/plugin-descriptor.properties
@@ -1,6 +1,6 @@
 #
 # 'description': simple summary of the plugin
-description=Provide access control related features for Elasticsearch 6
+description=Provide security related features for Elasticsearch 6
 #
 # 'version': plugin's version
 version=6.0.x-HEAD
