--- a/sgconfig/sg_config.yml
+++ b/sgconfig/sg_config.yml
@@ -116,7 +116,7 @@ searchguard:
         authentication_backend:
           type: noop
       jwt_auth_domain:
-        http_enabled: false
+        http_enabled: true
         transport_enabled: false
         order: 0
         http_authenticator:
